[gd_scene load_steps=2 format=3 uid="uid://bk8x3v7iaqp2m"]

[ext_resource type="Script" path="res://scripts/ui/HUDHero.gd" id="1"]

[node name="HUD_Hero" type="CanvasLayer"]
script = ExtResource("1")

[node name="StatsPanel" type="ColorRect" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 180.0
grow_horizontal = 0
color = Color(0.2, 0.2, 0.25, 0.9)

[node name="StatsVBox" type="VBoxContainer" parent="StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="StatsPanel/StatsVBox"]
layout_mode = 2
text = "HÉROE"
horizontal_alignment = 1

[node name="HPLabel" type="Label" parent="StatsPanel/StatsVBox"]
layout_mode = 2
text = "HP: 60 / 60"

[node name="HPBar" type="ProgressBar" parent="StatsPanel/StatsVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 60.0
value = 60.0
show_percentage = false

[node name="STRLabel" type="Label" parent="StatsPanel/StatsVBox"]
layout_mode = 2
text = "STR: 5"

[node name="AGILabel" type="Label" parent="StatsPanel/StatsVBox"]
layout_mode = 2
text = "AGI: 5"

[node name="INTLabel" type="Label" parent="StatsPanel/StatsVBox"]
layout_mode = 2
text = "INT: 5"

[node name="DMGLabel" type="Label" parent="StatsPanel/StatsVBox"]
layout_mode = 2
text = "DMG: 6"

[node name="EquipmentPanel" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -90.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.15, 0.15, 0.18, 0.85)

[node name="EquipHBox" type="HBoxContainer" parent="EquipmentPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="WeaponSlot" type="Button" parent="EquipmentPanel/EquipHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Arma: ---"

[node name="ArmorSlot" type="Button" parent="EquipmentPanel/EquipHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Armadura: ---"

[node name="AccessorySlot" type="Button" parent="EquipmentPanel/EquipHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accesorio: ---"

[node name="RoomLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
text = "DUNGEON - Sala: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -50.0
offset_right = 110.0
offset_bottom = -10.0
grow_vertical = 0
text = "← Volver a Forja"
